objects/Account_Member_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Member Snapshots</relationshipLabel>
        <relationshipName>Account_Member_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Health_Members__c</fullName>
        <label>Active Health Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Member Snapshot</label>
    <nameField>
        <label>Account Member Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Member Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>